Dec 3, 2003

  * FIXED: generate proper blank nodes in manipulating lists.

Dec 01, 2003

  * FIXED: Handle symmetric properties (Marijn Manders) 

  * ADDED: View/OWL/Super properties

SNAPSHOT 0.3
============

Nov 20, 2003

  * ADDED: Check database for triples that are not in any context.  If
    there are, add 'user' to save file menu.

  * ENHANCED: Tools/Add missing labels: better cleaning of label names,
    capitalise class-names (but not the name of other resources).

Nov 18, 2003

  * ADDED: Protected files and directing new triples to specified files.
    Requires SWI-Prolog 5.2.10 from the BETA download.

Nov 14, 2003

  * ADDED: link to wiki web from help menu (suggested by Mark)