@@ -52,13 +52,9 @@ initialise(D, Parent:name, Role:name, Client:[object]*) :->
 	send(D, slot, resource, Parent),
 	send(D, slot, client, Cntl),
 	send_super(D, initialise, string('Create %s', Role?label_name)),
-	(   rdf_global_id(NS:_, Parent)
-	->  true
-	;   NS = @default
-	),
-	rdf_default_file(Parent, File),
+	rdf_default_file(Parent, File, NS),
 	send(D, append, new(rdf_file_menu(File))),
-	send(D, append, new(rdf_ns_menu(NS))),
+	send(D, append, new(rdf_ns_menu(NS))), % TBD: update if file changes
 	send(D, append, new(rdf_id_item), right),
 	send(D, append, new(C, button(create, message(D, create_resource)))),
 	send(D, append, button(done)),
